--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,2 @@
 <p>this is new repo.</p>
-<P>this is feature1 part </P>
-<p>this is main</p>
-<p>this is main</p>
+<P>this is feature1 part ("dropdown")</P>
